Fix github large file woes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "ranges": "c"
+        "ranges": "c",
+        "stdlib.h": "c",
+        "errno.h": "c",
+        "cstddef": "c"
     }
 }
