--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "ranges": "c",
         "stdlib.h": "c",
         "errno.h": "c",
-        "cstddef": "c"
+        "cstddef": "c",
+        "assets.h": "c"
     }
 }
