adding more compression rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "stdlib.h": "c",
         "errno.h": "c",
         "cstddef": "c",
-        "assets.h": "c"
+        "assets.h": "c",
+        "types.h": "c",
+        "stdint.h": "c"
     }
 }
